--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,125 @@
     <link rel="stylesheet" href="/styles/main.css" />
   </head>
   <body>
-    <h2>My stuff</h2>
-    <!-- Custom scripts, edit above this line -->
-    <script src="scripts/index.js"></script>
+
+    <nav>
+      <div class="nav-item">Home</div>
+      <div class="nav-item">About</div>
+      <div class="nav-item">Contact</div>
+    </nav>
+
+    <main>
+      <div class="hero">
+        <h2>My personal website!</h2>
+      </div>
+
+      <div class="card">
+        <img src="../images/mountain.jpg" alt="">
+        <h4>
+          Mountains
+        </h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur
+          adipisicing elit. A assumenda cupiditate
+          dolorem eius error explicabo hic iusto
+          molestiae, nemo nostrum numquam porro,
+          reiciendis, vero! Consectetur cum error
+          fuga voluptas voluptate!
+        </p>
+      </div>
+
+      <div class="card">
+        <img src="../images/surfer.jpg" alt="">
+        <h4>
+          Surfer
+        </h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur
+          adipisicing elit. A assumenda cupiditate
+          dolorem eius error explicabo hic iusto
+          molestiae, nemo nostrum numquam porro,
+          reiciendis, vero! Consectetur cum error
+          fuga voluptas voluptate!
+        </p>
+      </div>
+
+      <div class="card">
+        <img src="../images/tree.jpg" alt="">
+        <h4>
+          Tree
+        </h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur
+          adipisicing elit. A assumenda cupiditate
+          dolorem eius error explicabo hic iusto
+          molestiae, nemo nostrum numquam porro,
+          reiciendis, vero! Consectetur cum error
+          fuga voluptas voluptate!
+        </p>
+      </div>
+
+      <aside>
+        <h5>
+          Aside 1
+        </h5>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur
+          adipisicing elit. A assumenda cupiditate
+          dolorem eius error explicabo hic iusto
+          molestiae, nemo nostrum numquam porro,
+          reiciendis, vero! Consectetur cum error
+          fuga voluptas voluptate!
+        </p>
+      </aside>
+
+      <article>
+        <h4>
+          Article
+        </h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur
+          adipisicing elit. A assumenda cupiditate
+          dolorem eius error explicabo hic iusto
+          molestiae, nemo nostrum numquam porro,
+          reiciendis, vero! Consectetur cum error
+          fuga voluptas voluptate!
+          Lorem ipsum dolor sit amet, consectetur
+          adipisicing elit. A assumenda cupiditate
+          dolorem eius error explicabo hic iusto
+          molestiae, nemo nostrum numquam porro,
+          reiciendis, vero! Consectetur cum error
+          fuga voluptas voluptate!
+          Lorem ipsum dolor sit amet, consectetur
+          adipisicing elit. A assumenda cupiditate
+          dolorem eius error explicabo hic iusto
+          molestiae, nemo nostrum numquam porro,
+          reiciendis, vero! Consectetur cum error
+          fuga voluptas voluptate!
+        </p>
+      </article>
+
+      <aside>
+        <h5>
+          Aside 2
+        </h5>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur
+          adipisicing elit. A assumenda cupiditate
+          dolorem eius error explicabo hic iusto
+          molestiae, nemo nostrum numquam porro,
+          reiciendis, vero! Consectetur cum error
+          fuga voluptas voluptate!
+        </p>
+      </aside>
+
+    </main>
+
+    <footer>
+      <div class="footer-item">GitHub</div>
+      <div class="footer-item">Codepen</div>
+      <div class="footer-item">LinkedIn</div>
+    </footer>
+
   </body>
+  <script src="scripts/index.js"></script>
 </html>
