added media-querys, tablet and desktop scss-files

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Fran's Project woo</title>
-    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" media="screen and (min-width: 0px) and (max-width: 767px)" href="/styles/mobile.css" />
+    <link rel="stylesheet" media="screen and (min-width: 768px) and (max-width: 1023px)" href="/styles/tablet.css" />
+    <link rel="stylesheet" media="screen and (min-width: 1024px)" href="/styles/desktop.css" />
   </head>
   <body>
 
@@ -20,104 +22,116 @@
         <h2>My personal website!</h2>
       </div>
 
-      <div class="card">
-        <img src="../images/mountain.jpg" alt="">
-        <h4>
-          Mountains
-        </h4>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur
-          adipisicing elit. A assumenda cupiditate
-          dolorem eius error explicabo hic iusto
-          molestiae, nemo nostrum numquam porro,
-          reiciendis, vero! Consectetur cum error
-          fuga voluptas voluptate!
-        </p>
+      <div class="cards-section">
+        <div class="card">
+          <img src="../images/mountain.jpg" alt="">
+          <div class="text">
+            <h4>
+              Mountains
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur
+              adipisicing elit. A assumenda cupiditate
+              dolorem eius error explicabo hic iusto
+              molestiae, nemo nostrum numquam porro,
+              reiciendis, vero! Consectetur cum error
+              fuga voluptas voluptate!
+            </p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="../images/surfer.jpg" alt="">
+          <div class="text">
+            <h4>
+              Surfer
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur
+              adipisicing elit. A assumenda cupiditate
+              dolorem eius error explicabo hic iusto
+              molestiae, nemo nostrum numquam porro,
+              reiciendis, vero! Consectetur cum error
+              fuga voluptas voluptate!
+            </p>
+          </div>
+
+        </div>
+
+        <div class="card">
+          <img src="../images/tree.jpg" alt="">
+          <div class="text">
+            <h4>
+              Tree
+            </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur
+              adipisicing elit. A assumenda cupiditate
+              dolorem eius error explicabo hic iusto
+              molestiae, nemo nostrum numquam porro,
+              reiciendis, vero! Consectetur cum error
+              fuga voluptas voluptate!
+            </p>
+          </div>
+        </div>
       </div>
 
-      <div class="card">
-        <img src="../images/surfer.jpg" alt="">
-        <h4>
-          Surfer
-        </h4>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur
-          adipisicing elit. A assumenda cupiditate
-          dolorem eius error explicabo hic iusto
-          molestiae, nemo nostrum numquam porro,
-          reiciendis, vero! Consectetur cum error
-          fuga voluptas voluptate!
-        </p>
+
+      <div class="articles-and-asides">
+        <aside>
+          <h5>
+            Aside 1
+          </h5>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur
+            adipisicing elit. A assumenda cupiditate
+            dolorem eius error explicabo hic iusto
+            molestiae, nemo nostrum numquam porro,
+            reiciendis, vero! Consectetur cum error
+            fuga voluptas voluptate!
+          </p>
+        </aside>
+
+        <article>
+          <h4>
+            Article
+          </h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur
+            adipisicing elit. A assumenda cupiditate
+            dolorem eius error explicabo hic iusto
+            molestiae, nemo nostrum numquam porro,
+            reiciendis, vero! Consectetur cum error
+            fuga voluptas voluptate!
+            Lorem ipsum dolor sit amet, consectetur
+            adipisicing elit. A assumenda cupiditate
+            dolorem eius error explicabo hic iusto
+            molestiae, nemo nostrum numquam porro,
+            reiciendis, vero! Consectetur cum error
+            fuga voluptas voluptate!
+            Lorem ipsum dolor sit amet, consectetur
+            adipisicing elit. A assumenda cupiditate
+            dolorem eius error explicabo hic iusto
+            molestiae, nemo nostrum numquam porro,
+            reiciendis, vero! Consectetur cum error
+            fuga voluptas voluptate!
+          </p>
+        </article>
+
+        <aside>
+          <h5>
+            Aside 2
+          </h5>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur
+            adipisicing elit. A assumenda cupiditate
+            dolorem eius error explicabo hic iusto
+            molestiae, nemo nostrum numquam porro,
+            reiciendis, vero! Consectetur cum error
+            fuga voluptas voluptate!
+          </p>
+        </aside>
       </div>
-
-      <div class="card">
-        <img src="../images/tree.jpg" alt="">
-        <h4>
-          Tree
-        </h4>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur
-          adipisicing elit. A assumenda cupiditate
-          dolorem eius error explicabo hic iusto
-          molestiae, nemo nostrum numquam porro,
-          reiciendis, vero! Consectetur cum error
-          fuga voluptas voluptate!
-        </p>
-      </div>
-
-      <aside>
-        <h5>
-          Aside 1
-        </h5>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur
-          adipisicing elit. A assumenda cupiditate
-          dolorem eius error explicabo hic iusto
-          molestiae, nemo nostrum numquam porro,
-          reiciendis, vero! Consectetur cum error
-          fuga voluptas voluptate!
-        </p>
-      </aside>
-
-      <article>
-        <h4>
-          Article
-        </h4>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur
-          adipisicing elit. A assumenda cupiditate
-          dolorem eius error explicabo hic iusto
-          molestiae, nemo nostrum numquam porro,
-          reiciendis, vero! Consectetur cum error
-          fuga voluptas voluptate!
-          Lorem ipsum dolor sit amet, consectetur
-          adipisicing elit. A assumenda cupiditate
-          dolorem eius error explicabo hic iusto
-          molestiae, nemo nostrum numquam porro,
-          reiciendis, vero! Consectetur cum error
-          fuga voluptas voluptate!
-          Lorem ipsum dolor sit amet, consectetur
-          adipisicing elit. A assumenda cupiditate
-          dolorem eius error explicabo hic iusto
-          molestiae, nemo nostrum numquam porro,
-          reiciendis, vero! Consectetur cum error
-          fuga voluptas voluptate!
-        </p>
-      </article>
-
-      <aside>
-        <h5>
-          Aside 2
-        </h5>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur
-          adipisicing elit. A assumenda cupiditate
-          dolorem eius error explicabo hic iusto
-          molestiae, nemo nostrum numquam porro,
-          reiciendis, vero! Consectetur cum error
-          fuga voluptas voluptate!
-        </p>
-      </aside>
 
     </main>
 
